@@ -8,7 +8,7 @@
     <relativePath>../gae-pom.xml</relativePath>
   </parent>
   <artifactId>aggregate-gae</artifactId>
-  <packaging>war</packaging>
+  <packaging>ear</packaging>
   <name>ODK Aggregate for Google Appengine</name>
   <properties>
     <gae.version>${gooogle.appengine.sdk.version}</gae.version>
@@ -17,18 +17,26 @@
   <dependencies>
     <dependency>
       <groupId>org.opendatakit</groupId>
-      <artifactId>aggregate-src</artifactId>
+      <artifactId>aggregate-gae-default</artifactId>
       <version>latest</version>
+	  <type>war</type>
     </dependency>
     <dependency>
       <groupId>org.opendatakit</groupId>
-      <artifactId>odk-gae-it-settings</artifactId>
+      <artifactId>aggregate-gae-n-background</artifactId>
       <version>latest</version>
+	  <type>war</type>
+    </dependency>
+    <dependency>
+      <groupId>org.opendatakit</groupId>
+      <artifactId>aggregate-src</artifactId>
+      <version>latest</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
         <groupId>org.apache.wink</groupId>
         <artifactId>wink-client</artifactId>
-        <version>1.4</version>
+        <version>${org.apache.wink.version}</version>
         <scope>test</scope>
     </dependency>
   </dependencies>
@@ -54,59 +62,77 @@
 			</executions>
 		</plugin>
 		<plugin>
-			<groupId>org.codehaus.mojo</groupId>
-			<artifactId>gwt-maven-plugin</artifactId>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>${maven.compiler.plugin.version}</version>
 			<executions>
-			  <execution>
-				<id>gwt-javascript</id>
-			  </execution>
+				<execution>
+					<id>compile-test-source</id>
+				</execution>
 			</executions>
 		</plugin>
         <plugin>
 			<artifactId>maven-antrun-plugin</artifactId>
 			<executions>
 			  <execution>
-				<id>war-clean</id>
+				<id>ear-clean</id>
 				<phase>pre-clean</phase>
 			  </execution>
 			  <execution>
-				<id>war-prep</id>
+				<id>ear-gae-prep</id>
 				<phase>generate-resources</phase>
 			  </execution>
-			  <execution>
-				<id>war-remove-classes-except-stub</id>
-				<phase>prepare-package</phase>
-			  </execution>
 				<execution>
-					<id>prepare-instrumented-war-folder</id>
+					<id>prepare-instrumented-ear-folder</id>
 					<phase>pre-integration-test</phase>
 				</execution>
 				<execution>
-					<id>add-emma-to-war-folder</id>
+					<id>add-jacoco-to-ear-folder</id>
 					<phase>pre-integration-test</phase>
 				</execution>
 				<execution>
-					<id>prepare-instrumented-war</id>
+					<id>prepare-instrumented-ear</id>
 					<phase>pre-integration-test</phase>
 				</execution>
 			</executions>
         </plugin>
         <plugin>
 			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-war-plugin</artifactId>
+			<artifactId>maven-ear-plugin</artifactId>
+			<version>${maven.ear.plugin.version}</version>
+			<configuration>
+			  <skinnyWars>false</skinnyWars>
+			  <modules>
+			    <webModule>
+				  <groupId>org.opendatakit</groupId>
+				  <artifactId>aggregate-gae-default</artifactId>
+				  <uri>default</uri>
+				  <unpack>true</unpack>
+				  <contextRoot>default</contextRoot>
+				</webModule>
+			    <webModule>
+				  <groupId>org.opendatakit</groupId>
+				  <artifactId>aggregate-gae-n-background</artifactId>
+				  <uri>background</uri>
+				  <unpack>true</unpack>
+				  <contextRoot>background</contextRoot>
+				</webModule>
+			  </modules>
+			</configuration>
 			<executions>
 			  <execution>
-				<id>war-build</id>
+				<id>ear-build</id>
 				<phase>package</phase>
 			  </execution>
 			</executions>
         </plugin>
 		<plugin>
-			<!--  This references the emma plugin, configuration is in the parent -->
-			<groupId>org.sonatype.maven.plugin</groupId>
-			<artifactId>emma-maven-plugin</artifactId>
+			<!--  This references the jacoco plugin, configuration is in the parent -->
+			<groupId>org.jacoco</groupId>
+			<artifactId>jacoco-maven-plugin</artifactId>
 		</plugin>
       <!-- This plug-in integrates project with appengine -->
+	  <!-- TODO: update this to https://cloud.google.com/appengine/docs/java/tools/maven -->
         <plugin>
 			<groupId>net.kindleit</groupId>
 			<artifactId>maven-gae-plugin</artifactId>
@@ -119,6 +145,10 @@
 			  <splitJars>true</splitJars>
 			  <jvmFlags>
 				<jvmFlag>-Ddatastore.default_high_rep_job_policy_unapplied_job_pct=20</jvmFlag>
+				<jvmFlag>-XX:PermSize=1536m</jvmFlag>
+				<jvmFlag>-XX:MaxPermSize=1536m</jvmFlag>
+				<jvmFlag>-Xms256m</jvmFlag>
+				<jvmFlag>-Xmx3048m</jvmFlag>
 			  </jvmFlags>
 			  <port>${test.server.port}</port>
 			  <monitorPort>${test.server.gae.monitor.port}</monitorPort>
@@ -176,7 +206,7 @@
 		  <configuration>
 			<argLine>${surefire.argLine}</argLine>
 			<skipTests>true</skipTests>
-			<classesDirectory>${project.build.directory}/generated-classes/emma/classes</classesDirectory>
+			<classesDirectory>${project.build.directory}/generated-classes/jacoco/classes</classesDirectory>
 			<excludes>
 			  <exclude>**/integration/**</exclude>
 			</excludes>
@@ -210,9 +240,10 @@
 	<reporting>
 		<plugins>
 		  <plugin>
-			<groupId>org.sonatype.maven.plugin</groupId>
-			<artifactId>emma-maven-plugin</artifactId>
-			<version>${emma.maven.plugin.version}</version>
+			<!--  This references the jacoco plugin, configuration is in the parent -->
+			<groupId>org.jacoco</groupId>
+			<artifactId>jacoco-maven-plugin</artifactId>
+			<version>${jacoco.maven.plugin.version}</version>
 			<inherited>true</inherited>
 		  </plugin>
 		  <plugin>
